<resources>
    <string name="app_name">Mimuseum</string>

    <!--Menu-->
    <string name="mnMain">Principal</string>
    <string name="mnLoc">Sua localização</string>
    <string name="mnNew">Nova arte</string>
    <string name="mnOut">Sair</string>

    <!--Arte-->
    <string name="artTit">Nome da arte</string>
    <string name="artCrea">Artista</string>
    <string name="artEsti">Estilo</string>
    <string name="artAno">Ano</string>
    <string name="artChange">Mudar a obra de arte</string>

    <string name="error">Não foi possível carregar os dados solicitados...</string>

    <!--Login e cadastro-->
    <string name="cadTit">Cadastrar</string>
    <string name="logTit">Logar</string>
    <string name="logUsu">Nome de usuário:</string>
    <string name="logPass">Senha</string>

    <!--Adicionar arte-->
    <string name="addTit">Adicionar uma nova obra de arte</string>
    <string name="addImgGuide">Insira a URL da imagem que deseja exibir.</string>
    <string name="addBtn">Adicionar</string>

    <!--Galeria-->
    <string name="galTit">Minha galeria</string>

    <!--Hints-->
    <string name="htArtSearch">Pesquisar por nome da arte</string>
    <string name="dfHiArt">Nome da arte</string>
    <string name="hiLog">Insira seu nome de usuário</string>
    <string name="hiPass">Insira sua senha</string>
    <string name="hiGal">Lista de obras de arte salvas</string>


    <!--GeoLoc-->
    <string name="editar">Editar</string>
    <string name="endereco">"Endereço: %1$s  \n \n Horário: %4$tr"</string>
    <string name="loading">Carregando…</string>
    <string name="parar_busca">PARAR BUSCA</string>
    <string name="iniciar_busca">INICIAR</string>
    <string name="permissao_recusada">Permissão negada, autorize a aplicação </string>
    <string name="sem_localizacao">Localização Indisponível</string>
    <string name="hint_busca">Clique para iniciar a busca</string>
    <string name="sem_endereco">Endereço indisponível</string>
    <string name="coordenada_invalida">Coordenadas inválidas</string>
    <string name="servico_indisponivel">Esse serviço está indisponível</string>

    <!--widget-->
    <string name="appwidget_text">MIMUSEUM</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Utilize como atalho para executar o mimuseum</string>
</resources>