<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".addArt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="55dp"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addTit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/addTit"
            android:textAlignment="inherit"
            android:textColor="@color/sec"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/addNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artTit"
            android:inputType="text"
            android:textColor="@color/sec"
            android:textColorHint="@color/thir"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/addCre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artCrea"
            android:inputType="text"
            android:textColor="@color/sec"
            android:textColorHint="@color/thir"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/addEsti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artEsti"
            android:inputType="text"
            android:textColor="@color/sec"
            android:textColorHint="@color/thir"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/addAno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/artAno"
            android:inputType="number"
            android:textColor="@color/sec"
            android:textColorHint="@color/thir"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/addImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addImgGuide"
            android:inputType="none"
            android:textColor="@color/sec"
            android:textColorHint="@color/thir"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnChange"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/thir"
            android:onClick="sendInfos"
            android:paddingVertical="10dp"
            android:text="@string/addBtn"
            android:textAllCaps="false"
            android:textColor="@color/back"
            android:textSize="20sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_new_releases_24"
            app:iconPadding="0dp"
            app:iconSize="35dp"
            app:iconTint="@color/back"
            app:iconTintMode="src_in" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>