<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/logTit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cadTit"
            android:textColor="@color/sec"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/logUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logUsu"
            android:textColor="@color/sec"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/logUsuEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sec"
            android:contentDescription="@string/hiLog"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="50dp" />

        <TextView
            android:id="@+id/logPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logPass"
            android:textColor="@color/sec"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/logPassEd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sec"
            android:contentDescription="@string/hiPass"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:outlineAmbientShadowColor="#3C0101" />

        <Button
            android:id="@+id/btnLog"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/thir"
            android:paddingVertical="10dp"
            android:text="@string/cadTit"
            android:textAllCaps="false"
            android:textColor="@color/back"
            android:textSize="20sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_create_24"
            app:iconPadding="0dp"
            app:iconSize="35dp"
            app:iconTint="@color/back"
            app:iconTintMode="src_in" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>